# cad_image_markup

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: CannyParamsDefault.json  CeresParamsDefault.json  SolutionParamsDefault.json
data/test1/: config.json  initial_pose.json  intrinsics.json
dependencies/: install_python_deps.sh  install_segment_anything.sh
examples/: convergence_tests.cpp  load_and_build_examples.cpp  run_example_bridge.sh  run_example_simulated_column.sh  run_example_train_station.sh  run_example_train_station_old.sh
examples/example_TEMP/: defect_labels_interim.json  image_labels_interim.json
examples/example_config/: CannyParamsExampleTrainStation.json  CeresParamsExample.json  SolutionParamsExampleBridge.json  SolutionParamsExampleSim.json  SolutionParamsExampleTrainStation copy.json  SolutionParamsExampleTrainStation.json
examples/example_data/: Radtan_intrinsics.json
examples/example_data/bridge/: initial_pose.json  intrinsics.json
examples/example_data/labelled_images/: real_cad_feature_label.json  real_view_1_feature_label.json  real_view_2_feature_label.json  real_view_3_feature_label.json  real_view_4_feature_label.json
examples/example_data/poses/: initial_pose.json  initial_pose_sim.json
examples/example_data/sim/: initial_pose.json
examples/example_data/train_station/: intrinsics.json
include/cad_image_markup/: CadImageMarkup.h  EdgeExtractorCanny.h  Gflags.h  ImageBuffer.h  ImageDefectExtractor.h  Log.h  MarkupVisualizer.h  Optional.h  Params.h  Solver.h  Utils.h  Visualizer.h
include/cad_image_markup/camera_models/: CameraModel.h  CameraModels.h  DoubleSphere.h  KannalaBrandt.h  Radtan.h
include/cad_image_markup/optimization/: CamPoseReprojectionCost.h  CeresParams.h  OrientationPriorCost.h  PointToLineCost.h
scripts/: build_project.sh  extract_edges_using_sam.py  install_deps.sh  run_all_tests.sh
src/: align_and_markup_cad.cpp  cad_image_markup.cpp  extract_annotated_defects.cpp  extract_edges_using_canny.cpp  visualize_markups.cpp
src/lib/: CMakeLists.txt  CadImageMarkup.cpp  EdgeExtractorCanny.cpp  Gflags.cpp  ImageBuffer.cpp  ImageDefectExtractor.cpp  MarkupVisualizer.cpp  Solver.cpp  Utils.cpp  Visualizer.cpp
src/lib/camera_models/: CameraModel.cpp  DoubleSphere.cpp  KannalaBrandt.cpp  Radtan.cpp
tests/: CMakeLists.txt  align_and_markup_tests.cpp  convergence_testing.txt  convergence_tests.cpp  defect_extractor_tests.cpp  display_image_edges.sh  edge_extractor_canny_tests.cpp  load_and_build_tests.c  load_and_build_tests.cpp
tests/ablation_study/: ablation_study.py  dummy_defect_labels.json  test_pose.json  true_pose_1_train_station.json
tests/ablation_study/outputs/: image_labels.json
tests/test_data/: Radtan_intrinsics_phone.json  test_1.txt  test_1_1.txt  test_1_2.txt  test_1_3.txt  test_1_4.txt
tests/test_data/labelled_images/: real_cad_feature_label.json  sim_CAD_missing.json
tests/test_data/poses/: -0.000000_-1.000000.json  -3.000000_-1.000000.json  -3.000000_1.000000.json  initial_pose.json
